Changed: using JPACriteria-based method instead of javacode for filtering previous file metadata version in GetFileVersionDifferencesCommand